methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:3: error: type mismatch;
 found   : Unit
 required: (Int, Int)
  var listPos:Array[(Int,Int)]=Array((7,6),(3,6),())
                                                 ^FlowerPot:4: error: not found: value color
  var listColor:Array[Color]=Array(color.red,Color.cyan,Color.orange,Color.green,Color.pink)
                                   ^FlowerPot:8: error: not enough arguments for method setPos: (x$1: Int, x$2: Int)Unit.
Unspecified value parameter x$2.
      setPos(listPos[compteur])
            ^